kubernetes/apps/observability/netdata/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netdata
  annotations:
    glance/name: "Netdata"
    glance/show: "true"
    glance/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/netdata.png"
    glance/id: "Network"
spec:
  hostnames: ["netdata.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: netdata
          namespace: observability
          port: 19999
